--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<!-- 1. Thay đổi tiêu đề -->
-	<title> CHÚC MỪNG SINH NHẬT Dũng </title>
+	<title> CHÚC MỪNG SINH NHẬT Chou </title>
 	<link rel="shortcut icon" href="./img/heart.png" type="image/x-icon"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -20,13 +20,13 @@
 				<div class="thu">
 					<div class="thuTitle text-center">
 						<!-- 2. Đây nữa -->
-						<div class="something">Gửi đến bạn,chàng trai năm 18 tuổi </div>
+						<div class="something">Gửi đến bạn lời chúc trân trọng nhất </div>
                                            
 					</div>
 					<div class="content">
 						<div class="tamthu p-5">
 							<!-- 3. Đây nữa -->
-							Kính gửi: Dũng (chó) ơi
+							Kính gửi: Chou Chou
 						<br> 	Thẻ cào nhân phẩm nè
 						<br>	Viettel :▒▒▒▒▒▒▒▒▒▒▒▒▒
 						<br>	Vina :▒▒▒▒▒▒▒▒▒▒▒▒▒
