--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<!-- 1. Thay đổi tiêu đề -->
-	<title> CHÚC MỪNG SINH NHẬT Chou </title>
+	<title> CHÚC MỪNG SINH NHẬT chị Ly </title>
 	<link rel="shortcut icon" href="./img/heart.png" type="image/x-icon"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -20,19 +20,19 @@
 				<div class="thu">
 					<div class="thuTitle text-center">
 						<!-- 2. Đây nữa -->
-						<div class="something">Gửi đến bạn lời chúc trân trọng nhất </div>
+						<div class="something">Gửi đến chị lời chúc trân trọng nhất </div>
                                            
 					</div>
 					<div class="content">
 						<div class="tamthu p-5">
 							<!-- 3. Đây nữa -->
-							Kính gửi: Chou Chou
+							Kính gửi: chị Ly
 						<br> 	Thẻ cào nhân phẩm nè
 						<br>	Viettel :▒▒▒▒▒▒▒▒▒▒▒▒▒
 						<br>	Vina :▒▒▒▒▒▒▒▒▒▒▒▒▒
 						<br>	Mobi :▒▒▒▒▒▒▒▒▒▒▒▒▒
 						<br>	Garena :▒▒▒▒▒▒▒▒▒▒▒▒▒
-						<br>-Tất cả đều 500k nhé -  bạn Cào nhẹ nhẹ thôi kẻo xước màn hình đấy:)))
+						<br>-Tất cả đều 500k nhé -  chị Cào nhẹ nhẹ thôi kẻo xước màn hình đấy:)))
 						<br>	Thân ái. 🎉🕯🎉🕯🎉🕯🎉 				
 <div class="col-12 text-center">
 							</div>
